plang/testing/logs/false-incorrect/137/program137.p.p.out
Error at iRuJ :- (lYG).:1:7 error: 
iRuJ :- (lYG).
      ^
Error at iRuJ :- (lYG).:1:12 error: 
iRuJ :- (lYG).
           ^