plang/testing/logs/false-incorrect/137/program137.p.p
iRuJ :- (lYG).

lFSa z (eh o A (r) (V7hW)) (K4) ba :- fLbw2 (AWMP); nU (Z) (GY) (YX2L) hKQM, r W5gz (D); a O att2, m2u7 U8U5c (U) (DK) Uq, (kpAP L97i (kmVjc) (mqv kG (Lw3)) (YZA)).


lgwG (idTeT I (EK) (YX)) (ppRAw E15 wnW77) qJ3.

? jFS.



